Combine problems and solutions into single files

--- a/ex01/ex01.tex
+++ b/ex01/ex01.tex
@@ -4,6 +4,9 @@
 \author{Karhunen, Luttinen}
 \date{Exercise 1, 4.11.2012}
 
+\newcommand{\vect}[1]{{\bf{#1}}}
+\newcommand{\svect}[1]{\boldsymbol{#1}}
+\newcommand{\matr}[1]{\boldsymbol{#1}}
 
 \begin{document}
 
