--- a/ex08/ex08_problems.tex
+++ b/ex08/ex08_problems.tex
@@ -1,90 +1,2 @@
-\documentclass[10pt]{article}
-\usepackage[english]{babel}
-\usepackage[latin1]{inputenc}
-\usepackage{subfigure}
-\usepackage{epsfig}
-\usepackage{amsmath,amssymb}
-\parindent 0mm
-\textwidth 16cm
-\textheight 23cm
-\oddsidemargin 0cm
-\evensidemargin 0cm
-\topmargin -10mm
-\newcommand{\vect}[1]{{\bf{#1}}}
-\newcommand{\svect}[1]{\boldsymbol{#1}}
-\newcommand{\matr}[1]{\boldsymbol{#1}}
-
-\renewcommand{\vec}[1]{\mathbf{#1}}
-\newcommand{\set}[1]{\mathcal{#1}}
-\newcommand{\C}{\set{C}}
-\newcommand{\E}{\mathcal{E}}
-\newcommand{\I}{\vec{I}}
-\renewcommand{\L}{\mathcal{L}}
-\newcommand{\N}{\mathrm{I \negmedspace N}}
-\newcommand{\R}{\mathrm{I \negmedspace R}}
-\newcommand{\V}{\set{V}}
-\newcommand{\W}{\vec{W}}
-\newcommand{\X}{\set{X}}
-\newcommand{\e}{\vec{e}}
-%\newcommand{\f}[1]{\mathrm{#1}} %funktio
-\newcommand{\h}{\vec{h}}
-\newcommand{\m}{\vec{m}}
-\newcommand{\mub}{\boldsymbol{\mu}}
-\newcommand{\n}{\vec{n}}
-\renewcommand{\t}{\vec{t}}
-\renewcommand{\u}{\vec{u}}
-\renewcommand{\v}{\vec{v}}
-\newcommand{\w}{\vec{w}}
-\newcommand{\x}{\vec{x}}
-\newcommand{\y}{\vec{y}}
-\newcommand{\Y}{\vec{Y}}
-\newcommand{\z}{\vec{z}}
-\newcommand{\argmin}{\operatornamewithlimits{argmin}}
-\newcommand{\argmax}{\operatornamewithlimits{argmax}}
-
-
-\begin{document}
-\pagestyle{empty}
-\begin{Large}
-\begin{bf} 
-T-61.5130 Machine Learning and Neural Networks\\ 
-\end{bf}
-\end{Large}
-Karhunen, Hao Tele\\  
-\\
-\begin{large}
-\begin{bf}
-Exercise 8,  1.12.2011
-\end{bf}
-\end{large}
-\begin{enumerate}
-
-\item Starting with the primal problem for the optimization of the
-  separating SVM-hyperplane for nonseparable patterns, formulate the
-  dual problem for the nonseparable case.
-
-\vspace{2mm}
-
-\item In the case of separable classes, what happens to the separating
-hyperplane of SVMs if the amount of noise increases? How about the
-case of nonseparable classes?
-
-\vspace{2mm}
-
-\item The inner-product kernel for a polynomial learning machine is
-  defined by
-  \begin{displaymath}
-    K(\x,\x_i) = (1 + \x^T \x_i)^p \; ,
-  \end{displaymath}
-  where $p$ is a positive integer.  What is the dimension of the
-  implicit feature space if the dimension of $\x$ is $m$.  Find lower
-  and upper bounds if you cannot find the exact answer.
-
-\vspace{2mm}
-
-\item Can a support vector machine be used to solve a pattern
-  classification task where there are more than two classes?
-
-
-\end{enumerate}
-\end{document}             % End of document.
+\documentclass{exercise}
+\input{ex08.tex}
